<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="16dp"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radio_group_sort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_by_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:checked="true"
                android:text="@string/upload_date"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_by_relevance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:padding="16dp"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:text="@string/relevance"/>
        </RadioGroup>


    </LinearLayout>
</layout>